--- a/room-booking-system/web/public/index.html
+++ b/room-booking-system/web/public/index.html
@@ -26,8 +26,8 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
-    <div id="tool"></div>
-    <div id="test"></div>
+    <div id="app_v1"></div>
+    <div id="app_v2"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
