--- a/room-booking-system/web/public/index.html
+++ b/room-booking-system/web/public/index.html
@@ -28,6 +28,7 @@
     <div id="root"></div>
     <div id="app_v1"></div>
     <div id="app_v2"></div>
+    <div id="app_home_edit"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
