--- a/room-booking-system/web/public/index.html
+++ b/room-booking-system/web/public/index.html
@@ -29,6 +29,8 @@
     <div id="app_v1"></div>
     <div id="app_v2"></div>
     <div id="app_home_edit"></div>
+    <div id="app_journi_edit"></div>
+    
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
